# ponci

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.toml  config.yaml  log.yaml  notes.md  roadmap.md
benches/: poncu_benchmarks.rs
docs/: roadmap.md
src/: lib.rs  server.rs
src/client/: core.rs  file_client.rs  mod.rs
src/server/: core.rs  file_server.rs  items.rs  mod.rs  raw_core.rs
src/server/items/: item_type.rs  storage.rs
src/server/items/item_type/: basic.rs  complex.rs  storage.rs
src/utils/: config.rs  http_range.rs  mod.rs
tests/: e2e.rs
