[package]
name = "poncu"
version = "0.1.0"
edition = "2021"
authors = ["Sheroz Khaydarov"]
description = "Distributed Data Storage Service"
documentation = "https://docs.rs/poncu"
readme = "README.md"
repository = "https://github.com/sheroz/poncu"
license = "MIT"
keywords = ["storage", "cache", "file-server"]
default-run = "main"

[dependencies]
log = "0.4"
log4rs = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
http = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "poncu_benchmarks"
harness = false